// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UbuntuBasic Docker container creation creates a Docker container for { version: 'latest', expectedImage: 'ubuntu:latest' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "ubuntu:latest",
      },
    },
  },
}
`;

exports[`UbuntuBasic Docker container creation creates a Docker container for { version: 'ubuntu18', expectedImage: 'ubuntu:18.04' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "provider": {
    "docker": [
      {},
    ],
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "ubuntu:18.04",
      },
    },
  },
  "terraform": {
    "required_providers": {
      "docker": {
        "source": "kreuzwerker/docker",
        "version": "3.0.2",
      },
    },
  },
}
`;

exports[`UbuntuBasic Docker container creation creates a Docker container for { version: 'ubuntu20', expectedImage: 'ubuntu:20.04' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "ubuntu:20.04",
      },
    },
  },
}
`;

exports[`UbuntuBasic Docker container creation creates a Docker container for { version: 'ubuntu22', expectedImage: 'ubuntu:22.04' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "ubuntu:22.04",
      },
    },
  },
}
`;

exports[`UbuntuBasic Docker container creation creates a Docker container for { version: 'ubuntu24', expectedImage: 'ubuntu:24.04' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "ubuntu:24.04",
      },
    },
  },
}
`;

exports[`UbuntuBasic Docker container creation creates a Docker container with volume 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
        "volumes": [
          {
            "container_path": "/mnt/data",
            "volume_name": "\${docker_volume.Test_Test-volume_F1ABD0A9.name}",
          },
        ],
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "ubuntu:22.04",
      },
    },
    "docker_volume": {
      "Test_Test-volume_F1ABD0A9": {
        "name": "Test-data",
      },
    },
  },
}
`;
